fix result hidden overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,8 @@ textarea:focus{
   background-color: #2f2f2f;
   width: 50%;
   padding: 5px;
+  word-wrap: break-word;
+  overflow: auto;
 }
 
 #result > *:first-child{
